# Burp-Copilot

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NEXT_PHASE_DEVELOPMENT.md  README.md  SECURITY.md  dev.ps1  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  database.py  input_guard.py  redaction.py
backend/app/llm/: __init__.py  base.py  fake_provider.py  ollama_provider.py  openai_provider.py  provider_registry.py  result_parser.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: analysis_service.py  endpoint_inventory.py  fingerprint_service.py  history_store.py  prompt_builder.py  roadmap_service.py  settings_store.py  statistics_service.py  task_store.py  task_worker.py
backend/scripts/: export_openapi.py
backend/tests/: test_analysis_api.py  test_batch_api.py  test_dashboard_and_stream.py  test_endpoint_inventory.py  test_fingerprint_service.py  test_history_filtering.py  test_input_guard.py  test_ollama_provider.py  test_openai_provider.py  test_provider_registry.py  test_recon_prompt.py  test_redaction.py  test_result_parser.py  test_roadmap_service.py  test_settings.py  test_settings_provider_contract.py  test_statistics_properties.py  test_statistics_service.py  test_task_store.py  test_task_worker.py
burp-extension/: pom.xml
docs/: architecture.md  ollama-setup.md  openapi.json  phase6-batch-queue-design.md  release-checklist.md  streaming-llm-output-ecc8fc.md
frontend/: .dockerignore  Dockerfile  index.html  (+5 more)
(+52 files in other folders)
